# qalculator

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json
src/app/: CMakeLists.txt
src/app/include/: Calculator.hpp  Converter.hpp  ConverterHandler.hpp  History.hpp  Utils.hpp
src/app/platform/: CMakeLists.txt
src/app/platform/android/: AndroidManifest.xml
src/app/platform/android/src/net/qalculator/: AndroidTest.java
src/app/qml/: MainWindow.qml  main.qml
src/app/qml/components/: StyledComboBox.qml  StyledComboItem.qml  StyledDialog.qml  StyledDrawerButton.qml  StyledTextInput.qml  StyledToolButton.qml  StyledWindowButtons.qml
src/app/qml/page/: Calculator.qml  Converter.qml  Standart.qml
src/app/qml/pages/: Converter.qml  Standart.qml
src/app/src/: Calculator.cpp  Calculator.hpp  Converter.cpp  Converter.hpp  ConverterHandler.cpp  ConverterHandler.hpp  History.cpp  OperationHistory.cpp  OperationHistory.hpp  Utils.hpp  main.cpp
src/calculator/: CMakeLists.txt
src/style/: CMakeLists.txt
src/style/qml/: StyledComboBox.qml  StyledTextInput.qml  StyledWindowButtons.qml
src/style/qml/style/: StyledComboBox.qml  StyledDrawerButton.qml  StyledToolButton.qml
